--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,12 @@
 # See http://help.github.com/ignore-files/ for more about ignoring files.
 
+# unnecessary files
+node_modules/
+dist/
+.env
+.DS_Store
+.angular/
+
 # Compiled output
 /dist
 /tmp
